# Simple-chat

./: .gitignore  .gitmodules  CMakeLists.txt  server
src/client/qt-client/chat-client/: chat-client.pro  login_dialog.cpp  login_dialog.hpp  login_dialog.ui  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  remote_server.cpp  remote_server.hpp  worker.cpp  worker.hpp
src/server/: api.cpp  api.hpp  base_server.cpp  base_server.hpp  main.cpp  threaded_server.cpp  threaded_server.hpp  user.cpp  user.hpp
